--- a/pandas_example.ipynb
+++ b/pandas_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -26,56 +26,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age_group</th>\n",
-       "      <th>income</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age_groups</th>\n",
+       "      <th>Income</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Male</td>\n",
-       "      <td>55+</td>\n",
-       "      <td>High</td>\n",
+       "      <td>35-54</td>\n",
+       "      <td>low</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Female</td>\n",
-       "      <td>35-54</td>\n",
-       "      <td>High</td>\n",
+       "      <td>55+</td>\n",
+       "      <td>low</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>55+</td>\n",
-       "      <td>High</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18-34</td>\n",
+       "      <td>medium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Female</td>\n",
-       "      <td>55+</td>\n",
-       "      <td>Low</td>\n",
+       "      <td>18-34</td>\n",
+       "      <td>low</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Male</td>\n",
-       "      <td>35-54</td>\n",
-       "      <td>Medium</td>\n",
+       "      <td>18-34</td>\n",
+       "      <td>low</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   gender age_group  income\n",
-       "0    Male       55+    High\n",
-       "1  Female     35-54    High\n",
-       "2  Female       55+    High\n",
-       "3  Female       55+     Low\n",
-       "4    Male     35-54  Medium"
+       "   Gender Age_groups  Income\n",
+       "0    Male      35-54     low\n",
+       "1  Female        55+     low\n",
+       "2    Male      18-34  medium\n",
+       "3  Female      18-34     low\n",
+       "4    Male      18-34     low"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,13 +89,12 @@
     "\n",
     "genders = [\"Male\", \"Female\"]\n",
     "age_groups = [\"18-34\", \"35-54\", \"55+\"]\n",
-    "income_levels = [\"Low\", \"Medium\", \"High\"]\n",
-    "\n",
+    "income_levels = [\"low\", \"medium\", \"high\"]\n",
     "\n",
     "data = {\n",
-    "    \"gender\": [random.choice(genders) for _ in range(num_records)],\n",
-    "    \"age_group\": [random.choice(age_groups) for _ in range(num_records)],\n",
-    "    \"income\": [random.choice(income_levels) for _ in range(num_records)]\n",
+    "    \"Gender\": [random.choice(genders) for _ in range(num_records)],\n",
+    "    \"Age_groups\": [random.choice(age_groups) for _ in range(num_records)],\n",
+    "    \"Income\": [random.choice(income_levels) for _ in range(num_records)]\n",
     "}\n",
     "\n",
     "data = pd.DataFrame(data)\n",
@@ -111,40 +110,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "data = pd.read_csv(r'examples\\data-with-pre_weight.csv')\n",
-    "data['pre_weight'] = 1.0"
+    "# import pandas as pd\n",
+    "# data = pd.read_csv(r'examples\\data-with-pre_weight.csv')\n",
+    "# data = pd.read_csv(r'examples\\data_with_weight_by_Dimensions.csv.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define weighting targets\n",
     "spec = {\n",
-    "    \"gender\": {\"Male\": 0.5, \"Female\": 0.5},\n",
-    "    \"age_group\": {\"18-34\": 0.4, \"35-54\": 0.4, \"55+\": 0.2},\n",
-    "    \"income\": {\"Low\": 0.33, \"Medium\": 0.34, \"High\": 0.33}\n",
+    "    \"Gender\": {\"Male\": 0.5, \"Female\": 0.5},\n",
+    "    \"Age_groups\": {\"18-34\": 0.4, \"35-54\": 0.4, \"55+\": 0.2},\n",
+    "    \"Income\": {\"low\": 0.33, \"medium\": 0.34, \"high\": 0.33}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1: RMS Error = 630.029688, Efficiency = 92.96%, Max Weight = 1.2624, Min Weight = 0.5682\n",
-      "✅ Converged in 1 iterations: All weights within limits.\n"
+      "Iteration 1: RMS Error = 1.981048, Efficiency = 91.23%, Max Weight = 1.4220, Min Weight = 0.5000\n",
+      "Iteration 2: RMS Error = 0.186636, Efficiency = 91.15%, Max Weight = 1.4272, Min Weight = 0.5000\n",
+      "Iteration 3: RMS Error = 0.048550, Efficiency = 91.13%, Max Weight = 1.4277, Min Weight = 0.5000\n",
+      "Iteration 4: RMS Error = 0.012420, Efficiency = 91.13%, Max Weight = 1.4278, Min Weight = 0.5000\n",
+      "Iteration 5: RMS Error = 0.003184, Efficiency = 91.13%, Max Weight = 1.4279, Min Weight = 0.5000\n",
+      "Iteration 6: RMS Error = 0.000816, Efficiency = 91.13%, Max Weight = 1.4279, Min Weight = 0.5000\n",
+      "✅ Converged by RMS error < 0.001 in 6 iterations.\n"
      ]
     }
    ],
@@ -155,44 +159,44 @@
     "rim = RIMWeightingPandas(\n",
     "    data=data, \n",
     "    spec=spec,\n",
-    "    pre_weight='pre_weight'\n",
+    "    pre_weight=None\n",
     ")\n",
     "\n",
     "# Apply weights\n",
     "weighted_data = rim.apply_weights(\n",
-    "    max_iterations=20, \n",
-    "    min_weight=0.2,\n",
-    "    max_weight=2.0\n",
+    "    max_iterations=10, \n",
+    "    min_weight=0.5,\n",
+    "    max_weight=1.5\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | gender   |   Unweighted Count |   Unweighted % |   Weighted_Count |   Min_Weight |   Max_Weight |   Weighted % |\n",
+      "|    | Gender   |   Unweighted Count |   Unweighted % |   Weighted_Count |   Min_Weight |   Max_Weight |   Weighted % |\n",
       "|----|----------|--------------------|----------------|------------------|--------------|--------------|--------------|\n",
-      "|  0 | Female   |                493 |        49.3000 |         497.0674 |       0.5843 |       1.2624 |      49.7067 |\n",
-      "|  1 | Male     |                507 |        50.7000 |         502.9326 |       0.5682 |       1.2275 |      50.2933 |\n",
+      "|  0 | Female   |                541 |        54.1000 |         500.0008 |       0.5000 |       1.1997 |      50.0000 |\n",
+      "|  1 | Male     |                459 |        45.9000 |         499.9999 |       0.5886 |       1.4279 |      50.0000 |\n",
       "\n",
       "\n",
-      "|    | age_group   |   Unweighted Count |   Unweighted % |   Weighted_Count |   Min_Weight |   Max_Weight |   Weighted % |\n",
-      "|----|-------------|--------------------|----------------|------------------|--------------|--------------|--------------|\n",
-      "|  0 | 18-34       |                335 |        33.5000 |         398.9557 |       1.1146 |       1.2624 |      39.8956 |\n",
-      "|  1 | 35-54       |                337 |        33.7000 |         400.4913 |       1.1057 |       1.2523 |      40.0491 |\n",
-      "|  2 | 55+         |                328 |        32.8000 |         200.5531 |       0.5682 |       0.6435 |      20.0553 |\n",
+      "|    | Age_groups   |   Unweighted Count |   Unweighted % |   Weighted_Count |   Min_Weight |   Max_Weight |   Weighted % |\n",
+      "|----|--------------|--------------------|----------------|------------------|--------------|--------------|--------------|\n",
+      "|  0 | 18-34        |                333 |        33.3000 |         399.9999 |       1.0028 |       1.4073 |      40.0000 |\n",
+      "|  1 | 35-54        |                330 |        33.0000 |         400.0001 |       1.0175 |       1.4279 |      40.0000 |\n",
+      "|  2 | 55+          |                337 |        33.7000 |         200.0008 |       0.5000 |       0.6940 |      20.0001 |\n",
       "\n",
       "\n",
-      "|    | income   |   Unweighted Count |   Unweighted % |   Weighted_Count |   Min_Weight |   Max_Weight |   Weighted % |\n",
+      "|    | Income   |   Unweighted Count |   Unweighted % |   Weighted_Count |   Min_Weight |   Max_Weight |   Weighted % |\n",
       "|----|----------|--------------------|----------------|------------------|--------------|--------------|--------------|\n",
-      "|  0 | High     |                317 |        31.7000 |         330.0000 |       0.6258 |       1.2624 |      33.0000 |\n",
-      "|  1 | Low      |                343 |        34.3000 |         330.0000 |       0.5682 |       1.1462 |      33.0000 |\n",
-      "|  2 | Medium   |                340 |        34.0000 |         340.0000 |       0.6120 |       1.2345 |      34.0000 |\n",
+      "|  0 | high     |                320 |        32.0000 |         330.0000 |       0.5606 |       1.3727 |      33.0000 |\n",
+      "|  1 | low      |                361 |        36.1000 |         330.0008 |       0.5000 |       1.2110 |      33.0001 |\n",
+      "|  2 | medium   |                319 |        31.9000 |         340.0000 |       0.5831 |       1.4279 |      34.0000 |\n",
       "\n",
       "\n"
      ]
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
